--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
   "name": "advanced-cra",
   "version": "0.0.1",
-  "keywords": [
-    "react",
-    "cra",
-    "template"
-  ],
-  "description": "Advanced template for CRA",
-  "license": "MIT",
-  "engines": {
-    "node": ">=16"
+  "description": "CLI app which creates react-app using cra and add additional functionality as you wish.",
+  "main": "bin/advanced-cra.js",
+  "bin": {
+    "advanced-cra": "bin/advanced-cra.js"
   },
-  "files": [
-    "template",
-    "template.json"
-  ]
+  "scripts": {
+    "build": "node esbuild.mjs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanishMehmood-bit/AdvancedCRA.git"
+  },
+  "keywords": [
+    "advancedcra"
+  ],
+  "author": "Danish Mehmood",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DanishMehmood-bit/AdvancedCRA/issues"
+  },
+  "homepage": "https://github.com/DanishMehmood-bit/AdvancedCRA#readme",
+  "dependencies": {
+    "esbuild": "^0.18.6",
+    "prompts": "^2.4.2",
+    "yargs": "^17.7.2"
+  }
 }
