--- a/cliApp/package.json
+++ b/cliApp/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "esbuild": "^0.18.6",
     "prompts": "^2.4.2",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "fs-extra": "^10.1.0"
   }
 }
